[gd_scene load_steps=4 format=2]

[ext_resource path="res://ad_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Pixellari.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="continuarBtn" type="Button" parent="."]
margin_left = 255.0
margin_top = 235.0
margin_right = 445.0
margin_bottom = 306.0
text = "Continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
margin_left = 2.58667
margin_top = 97.2004
margin_right = 721.587
margin_bottom = 201.2
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
margin_left = 637.0
margin_top = 380.0
margin_right = 718.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ad" type="Label" parent="."]
margin_left = -1.0
margin_top = 378.067
margin_right = 718.0
margin_bottom = 482.067
custom_fonts/font = SubResource( 1 )
text = "Insert Ad here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="pressed" from="continuarBtn" to="." method="_on_continuarBtn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
